--- a/Function/index.html
+++ b/Function/index.html
@@ -9,6 +9,6 @@
     <h2>Welcome to Function</h2>
     
 
-    <script src="script.js"></script>
+    <script src="/Function/arrow_function/script.js"></script>
 </body>
 </html>
