--- a/DOM/index.html
+++ b/DOM/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM</title>
-</head>
-<body>
-    <h1>BOM : Browser Object Model</h1>
-    <button id="button-click"></button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Advanced LocalStorage CRUD Example</title>
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <h1>Manage Records using LocalStorage</h1>
+    <h1>Hello arti</h1>
+
+    <div>
+      <div class="form-group">
+        <input type="text" id="name" placeholder="Enter name" />
+      </div>
+      <div class="form-group">
+        <input type="text" id="details" placeholder="Enter details" />
+      </div>
+      <div class="form-group">
+        <button id="addButton" onclick="addRecord()">Add Record</button>
+        <button
+          id="updateButton"
+          onclick="updateRecord()"
+          style="display: none"
+        >
+          Update Record
+        </button>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <input
+        type="text"
+        id="search"
+        placeholder="Search by name"
+        onkeyup="searchRecords()"
+      />
+    </div>
+
+    <h2>Stored Records:</h2>
+    <table>
+      <thead>
+        <tr>
+          <th class="one" hello = "hello world">Name</th>
+          <th class="one">Details</th>
+          <th class="one">Date</th>
+          <th class="one">Actions</th>
+        </tr>
+      </thead>
+      <tbody id="recordList"></tbody>
+    </table>
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
