--- a/DOM/index.html
+++ b/DOM/index.html
@@ -7,6 +7,7 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
+    <button id="btn">Change style</button>
     <h1>Manage Records using LocalStorage</h1>
     <h1>Hello arti</h1>
 
@@ -42,8 +43,8 @@
     <table>
       <thead>
         <tr>
-          <th class="one" hello = "hello world">Name</th>
-          <th class="one">Details</th>
+          <th class="one" hello="hello world">Name</th>
+          <th class="one" world="Attribute-world">Details</th>
           <th class="one">Date</th>
           <th class="one">Actions</th>
         </tr>
