--- a/Calculator-2/index.html
+++ b/Calculator-2/index.html
@@ -19,7 +19,7 @@
             onclick="clearScreen()"
             id="clear-screen"
           />
-          <div id="button"></div>
+          <div id="button"></div> <!--Place to insert children-->
         </div>
       </div>
     </div>
