--- a/fetch/index.html
+++ b/fetch/index.html
@@ -53,10 +53,12 @@
         -->
     </h1>
 
-    <form method="post" action="./index1.html">
+    <button id="fetch">Fetch</button>
+
+    <!-- <form method="post" action="./index1.html">
       <input type="date" value="name"/>
       <input type="submit" value="Submit" />
-    </form>
+    </form> -->
 
     <script src="script.js"></script>
   </body>
