--- a/fetch/index.html
+++ b/fetch/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AJAX</title>
-  </head>
-  <body>
-    <h1>
-      <!--
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AJAX</title>
+</head>
+
+<body>
+  <h1>
+    <!--
         Task 1 , Task 2 , Task 3 , Task 4 
 
         counter : 1 , 3 , 2 , 4
@@ -51,15 +53,18 @@
         PATCH : updating a specific value 
         DELETE : delete the data from server
         -->
-    </h1>
+  </h1>
 
-    <button id="fetch">Fetch</button>
+  <button id="fetch">Fetch</button>
 
-    <!-- <form method="post" action="./index1.html">
+  <div class="data-container" id="data-container"></div>
+
+  <!-- <form method="post" action="./index1.html">
       <input type="date" value="name"/>
       <input type="submit" value="Submit" />
     </form> -->
 
-    <script src="script.js"></script>
-  </body>
+  <script src="script.js"></script>
+</body>
+
 </html>
