--- a/fetch/index.html
+++ b/fetch/index.html
@@ -4,67 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AJAX</title>
+  <title>Document</title>
 </head>
 
 <body>
-  <h1>
-    <!--
-        Task 1 , Task 2 , Task 3 , Task 4 
-
-        counter : 1 , 3 , 2 , 4
-
-        Sync : 
-
-        while task 1 is being executed 3 , 2 , 4 wait untill task 1 get completed
-
-        while task 3 is being executed 2 , 4 wait untill task 3 get completed
-
-        while task 2 is being executed  4 wait untill task 2 get completed
-
-        while task 4 is being executed 
+  <h2 id="fatcs">Fetch</h2>
 
 
-        Async : || parally
-
-           1 order : pizza, burger
-           2 order : coke
-           3 order : water
-
-
-
-        API : Application programming interface.   
-
-        request : 
-        customer ===waiter==> cook
-        client ===API===> server
-        
-        response : 
-        cook ===waiter==> customer
-        server ===API===> client   
-
-
-        XML / JSON :
-
-        Methods of api : 
-        POST : create new data and send to server
-        GET : get data from server
-        PUT : update the complete data
-        PATCH : updating a specific value 
-        DELETE : delete the data from server
-        -->
-  </h1>
-
-  <button id="fetch">Fetch</button>
-
-  <div class="data-container" id="data-container"></div>
-
-  <!-- <form method="post" action="./index1.html">
-      <input type="date" value="name"/>
-      <input type="submit" value="Submit" />
-    </form> -->
-
-  <script src="script.js"></script>
+  <button id="btn">Fetch</button>
+  <p></p>
+  <script src="./script.js"></script>
 </body>
 
 </html>
