--- a/Js_Object/index.html
+++ b/Js_Object/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Management System</title>
-    <link href="styles.css">
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
